--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/JP-KEVIN/Repositoruipoke.git",
+  "homepage": "https://github.com/JP-KEVIN/Pokemonk.git",
   "name": "pokemon",
   "version": "0.1.0",
   "private": true,
